@@ -1,3 +1,7 @@
+drkns 2025-06-12 23:34:06+01:00 - build 212
+
+1. Fix spurious and unpredictable sorting.
+
 drkns 2025-05-17 01:50:55+01:00 - build 211
 
 1. Various WOW64-related fixes.
